Resolver problemas con el puerto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=microservicio-oauth
-server.port=9100
+server.port=${PORT:9100}
 
 eureka.client.service-url.defaultZone=http://episi-eureka-server.herokuapp.com/eureka
 
