--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.tramite_documentario.microservicio.backend</groupId>
+            <artifactId>common-personas</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.tramite_documentario.microservicios.backend</groupId>
             <artifactId>common-usuarios</artifactId>
             <version>0.0.1-SNAPSHOT</version>
